--- a/indexnew.html
+++ b/indexnew.html
@@ -13,9 +13,7 @@
     <title>JNL 221 - DV3</title>
   </head>
 
-  <body> Below is the global data on confirmed COVID-19 in the last two years.
-    I gathered the absolute change from March 2020 to March 2022 in Austria, Canada, China, Japan, Russia, and United States. For most of these countries, there is an increase in cases.
-    Please examine the chart below.
+  <body> 
 <h1>US National Mortality Statistics by State</h1>
 
     <div class="container">
@@ -28,7 +26,9 @@
 
       <div class="row">
         <div class="col-lg-7">
-
+<p> Below is the global data on confirmed COVID-19 in the last two years.
+    I gathered the absolute change from March 2020 to March 2022 in Austria, Canada, China, Japan, Russia, and United States. For most of these countries, there is an increase in cases.
+                             Please examine the chart below. </p>
           <!-- PLACE YOUR DATAWRAPPER <iframe> DIRECTLY UNDERNEATH ME! -->
 
           <iframe title="The Absolute Change of Confirmed COVID-19 Cases" aria-label="Column Chart" id="datawrapper-chart-NLVKK" src="https://datawrapper.dwcdn.net/NLVKK/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="228"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
